# mcp-chat

./: MCP_SERVER_IMPLEMENTATION.md  _modified_server_config.json  client.py  mcp_chat.py  pyproject.toml  server-fastmcp.py  server.py  server_config.json
mcp-simple/: README.md  mcp_client.py  mcp_server.py
