[project]
name = "mcp-pug-rest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.68.0",
    "gnureadline>=8.2.13",
    "httpx>=0.28.1",
    "mcp[cli]>=1.14.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "icecream>=2.1.8",
    "rich>=14.1.0",
]

[tool.uv.workspace]
members = [
    "x",
]
